# mitool-cli

./: CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: cmake-multi-platform.yml
lib/: CMakeLists.txt
lib/include/Downloader/: Downloader.h
lib/include/MiuiUpdate/: MiuiUpdate.h
lib/src/Downloader/: Downloader.cc  WriteFunc.cc
lib/src/MiuiUpdate/: MiuiCrypto.cc  MiuiFindUpdate.cc  MiuiKeys.h  MiuiParseVersion.cc
src/: CMakeLists.txt  FindCommand.cc  Main.cc  MiuiOTA.h  main.cc
src/MiuiUpdate/: MiuiCrypto.cc  MiuiFindUpdate.cc  MiuiParseVersion.cc  MiuiUpdate.h
