cmake_minimum_required(VERSION 3.16)
project(XiaomiOTA
  LANGUAGES CXX
  VERSION 0.0.1
)

include(cmake/CPM.cmake)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

CPMAddPackage("gh:libcpr/cpr#1.14.2")
CPMAddPackage("gh:nlohmann/json#v3.12.0")

add_subdirectory(src)