cmake_minimum_required(VERSION 3.16)
project(XiaomiOTA
  LANGUAGES CXX
  VERSION 0.0.1
)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

find_package(openssl REQUIRED)
find_package(nlohmann_json REQUIRED)
find_package(cpr REQUIRED)

add_subdirectory(src)